--- a/google-style.css
+++ b/google-style.css
@@ -5,3 +5,9 @@
     width: 25%;
     height: 15%;
 }
+.search-bar{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 35%;
+}
