--- a/google-style.css
+++ b/google-style.css
@@ -1,3 +1,6 @@
+body{
+    font-family: arial, sans-serif;
+}
 .image{
     display: block;
     margin-left: auto;
@@ -10,4 +13,10 @@
     margin-left: auto;
     margin-right: auto;
     width: 35%;
+}
+li{
+    display: inline-block;
+}
+li :hover{
+    text-emphasis: underline;
 }
