--- a/google-style.css
+++ b/google-style.css
@@ -16,6 +16,10 @@ body{
 }
 li{
     display: inline-block;
+    padding: 25px 0px 0px 20px;
+    color: black;
+    font-size: 13px;
+    opacity: 0.75;
 }
 li :hover{
     text-emphasis: underline;
