--- a/google-style.css
+++ b/google-style.css
@@ -16,15 +16,24 @@ body{
 }
 li{
     display: inline-block;
-    padding: 25px 10px 0px 10px;
     color: black;
     font-size: 13px;
     opacity: 0.75;
 }
-.footer {
+.nav-bar{
+    padding: 25px 10px 0px 10px;
+}
+.footer{
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
     background-color: #f2f2f2;
+    font-family: arial, sans-serif;
+}
+.li-footer{
+    padding: 15px 0px 20px 20px;
+    color: black;
+    font-size: 13px;
+    opacity: 0.75;
 }
