--- a/google-style.css
+++ b/google-style.css
@@ -12,7 +12,10 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 35%;
+    width: 40%;
+    border: 1px solid #dfe1e5;
+    border-radius: 24px;
+    padding: 5px 8px 0 16px;
 }
 li{
     display: inline-block;
@@ -30,6 +33,7 @@ li{
     width: 100%;
     background-color: #f2f2f2;
     font-family: arial, sans-serif;
+    border-top: 1px solid #e4e4e4;
 }
 .li-footer{
     padding: 15px 0px 20px 20px;
