--- a/google-style.css
+++ b/google-style.css
@@ -17,6 +17,20 @@ body{
     border-radius: 24px;
     padding: 5px 8px 0 16px;
 }
+.button{
+    background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 4px;
+    color: #5F6368;
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 11px 4px;
+    padding: 0 16px;
+    line-height: 27px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+}
 li{
     display: inline-block;
     color: black;
