--- a/google-style.css
+++ b/google-style.css
@@ -8,12 +8,14 @@ body{
     width: 25%;
     height: 15%;
 }
+.div{
+    border: 1px solid #dfe1e5;
+}
 .search-bar{
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 40%;
-    border: 1px solid #dfe1e5;
     border-radius: 24px;
     padding: 5px 8px 0 16px;
 }
